# poc_python_import

./: Makefile  pyproject.toml
package_a/: pyproject.toml
package_a/namespace/: clash.py
package_a/requests/: __init__.py
package_b/: pyproject.toml
package_b/namespace/: clash.py
poc_python_import/: hello.py
