[tool.poetry]
name = "package-a"
version = "0.1.0"
description = ""
authors = ["Thúlio Costa <github@thul.io>"]
# readme = "README.md"
packages = [{ include = "namespace" }, { include = "requests" }]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
