[tool.poetry]
name = "package-b"
version = "0.1.0"
description = ""
authors = ["Thúlio Costa <github@thul.io>"]
# readme = "README.md"
packages = [{ include = "namespace" }]

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
